terraform/modules/m_sg/bastion_sg.tf
# create security group SSH access for users
resource "aws_security_group" "bastion_sg"{
	name = "eng74-fp-bastion_sg"
	description = "Allow SSH access for bastion instnace"
	vpc_id = var.vpc_id

	ingress {
		description = "HTTP from all"
		from_port = 80
		to_port = 80
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
	}

	ingress {
		description = "HTTPS from all"
		from_port = 443
		to_port = 443
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
	}

	ingress {
		description = "SSH from home"
		from_port = 22
		to_port = 22
		protocol = "tcp"
		cidr_blocks = ["${var.my_ip}/32"]
	}

	ingress {
		description = "SSH for extra user"
		from_port = 22
		to_port = 22
		protocol = "tcp"
		cidr_blocks = ["${var.extra_user_ip}/32"]
	}

	egress {
		description = "All traffic out"
		from_port = 0
		to_port = 0
		protocol = "-1"
		cidr_blocks = ["0.0.0.0/0"]
	}

	tags = {
		Name = "eng74-fp-bastion_sg"
	}
}
